--- a/style.css
+++ b/style.css
@@ -4,25 +4,94 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&family=David+Libre&display=swap');
 
 body {
-    background-image: url('./fondo.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: white;
     /*font-family: 'Syne', sans-serif;
     font-family: 'Sansita Swashed', cursive;
     font-family: 'David Libre', serif;*/
     font-family: 'Comfortaa', cursive;
+    color: white;
     font-size: 150%;
+    margin: 0;
+    background-color: black;
+}
+.first {
+    background-image: url('./fondo.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    padding: 1%;
+}
+.second {
+    background-image: url('./fondo1.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-hr {
+.my-hr {
     width: 30%;
     margin-left: 1%;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: 40%;
+    width: 60%;
+    margin-left: 3%;
+}
+
+.grid-container-circles {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    width: 100%;
+}
+
+.grid-container-icons {
+    display: grid;
+    grid-template-columns: 15% 15% 15%;
+    width: 45%;
+    margin: 3%;
+}
+
+.center-text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.black-div {
+    background-color: rgba(0, 0, 0, 0.7);
+    margin: 0;
+    padding: 5%;
+}
+/*
+.card {
+    padding: 10%;
+    background-color: rgb(0, 0, 0);
+    background-size: contain;
+    background-repeat: no-repeat;
+}*/
+
+.titles {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    font-size: 250%;
+    font-family: 'Caveat', cursive;
+    font-weight: 100;
+}
+
+.my-h1 {
+    color: red;
+    font-size: 250%;
+    font-family: 'Caveat', cursive;
+    font-weight: 100;
+}
+
+/*menu*/
 .my-body, .nav, .menu {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    transition: 0.5s linear;
 }
 
 .nav {
@@ -44,8 +113,14 @@ hr {
 
 }
 
-.nav input:checked ~ .menu {
-    width: inherit;
+.menu a {
+    text-decoration: none;
+    color: black;
+    transition: 0.5s;
+    margin: 0 4%;
+}
+/*.nav input:checked ~ .menu {
+    width: 100%;
 }
 
 .menu li {
@@ -61,7 +136,7 @@ hr {
 
 .menu li a:hover {
      color: #161919;
-}
+}*/
 
 .nav input {
     width: 40px;
@@ -101,27 +176,9 @@ hr {
 .nav input:checked ~ span:nth-child(3) {
     transform: translateY(0) rotate(45deg);
 }
+/*fine menu*/
 
-.grid-container {
-    display: grid;
-    grid-template-columns: 40%;
-    width: 60%;
-    margin-left: 3%;
-}
-.grid-container-icons {
-    display: grid;
-    grid-template-columns: 15% 15% 15%;
-    width: 45%;
-    margin: 3%;
-}
-
-.my-h1 {
-    color: red;
-    font-size: 250%;
-    font-family: 'Caveat', cursive;
-    font-weight: 100;
-}
-
+/*icone*/
 .fa {
     padding: 20px;
     font-size: 30px;
@@ -154,3 +211,195 @@ hr {
     background: #3B5998;
     color: white;
 }
+
+/*fine icone*/
+
+/*card*/
+.cards-list {
+    z-index: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.card {
+    top: 50%;
+    width: 95%;
+    height: 150%;
+    border-radius: 40px;
+    /*box-shadow: 5px 5px 30px 7px rgba(255,255,255,0.25), -5px -5px 30px 7px rgba(255,255,255,0.22);*/
+    box-shadow: 10px 10px 10px rgba(255, 0, 0, 0.5);
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+    .card .card_image {
+        width: inherit;
+        height: inherit;
+        border-radius: 40px;
+    }
+
+        .card .card_image img {
+            width: inherit;
+            height: inherit;
+            border-radius: 40px;
+            object-fit: cover;
+        }
+
+    .card .card_title {
+        text-align: center;
+        border-radius: 0px 0px 40px 40px;
+        font-family: sans-serif;
+        font-weight: bold;
+        font-size: 30px;
+        margin-top: -80px;
+        height: 40px;
+    }
+
+    .card:hover {
+        transform: scale(0.9, 0.9);
+        /*box-shadow: 5px 5px 30px 15px rgba(255,255,255,0.25), -5px -5px 30px 15px rgba(255,255,255,0.22);*/
+        box-shadow: 5px 5px 10px rgba(255, 0, 0, 0.5);
+    }
+
+.title-white {
+    color: white;
+}
+
+.title-black {
+    color: black;
+}
+
+@media all and (max-width: 500px) {
+    .card-list {
+        /* On small screens, we are no longer using row direction but column */
+        flex-direction: column;
+    }
+}
+
+/*fine card*/
+
+
+.site-footer {
+    background-color: rgba(255, 255, 255, 0);
+    padding-top: 15vh;
+    margin: 5%;
+}
+
+    .site-footer row {
+        display: inline-block;
+    }
+
+
+        .site-footer hr.small {
+            margin: 20px 0
+        }
+
+
+
+    .site-footer p {
+        font-size: 1vmax;
+        text-transform: uppercase;
+        -webkit-user-select: text;
+        -moz-user-select: text;
+        user-select: text;
+    }
+
+    .site-footer h5 {
+        color: #fff;
+        font-size: 1vmax;
+        text-transform: uppercase;
+        letter-spacing: 0.4vmax;
+    }
+
+    .site-footer a {
+        color: #737373;
+    }
+
+        .site-footer a:hover {
+            color: #3366cc;
+            text-decoration: none;
+        }
+
+.footer-links {
+    padding-left: 0;
+    list-style: none
+}
+
+    .footer-links li {
+        display: block
+    }
+
+    .footer-links a {
+        color: #737373
+    }
+
+        .footer-links a:active, .footer-links a:focus, .footer-links a:hover {
+            color: #3366cc;
+            text-decoration: none;
+        }
+
+    .footer-links.inline li {
+        display: inline-block
+    }
+
+.social-icons {
+    float: right;
+}
+
+
+.copyright-text {
+    display: inline;
+    margin: 0
+}
+
+.social-icons li {
+    display: inline-block;
+    margin-bottom: 1em;
+}
+
+.social-icons a {
+    background-color: #eceeef;
+    color: #818a91;
+    display: inline-block;
+    width: 5vmin;
+    height: 5vmin;
+    margin-right: 1em;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear
+}
+
+    .social-icons a:active, .social-icons a:focus, .social-icons a:hover {
+        color: #fff;
+        background-color: #29aafe
+    }
+
+.social-icons.size-sm a {
+    line-height: 1em;
+    height: 1em;
+    width: 1em;
+    font-size: 1em;
+}
+
+.social-icons a.facebook {
+    background: url(fb.svg);
+    background-size: contain;
+    background-color: rgb(97, 94, 94);
+}
+
+    .social-icons a.facebook:hover {
+        background-color: #0341c9;
+    }
+
+.social-icons a.instagram {
+    background: url(instagram.svg);
+    background-size: contain;
+    background-color: rgb(97, 94, 94);
+}
+
+    .social-icons a.instagram:hover {
+        background-color: #c0206b
+    }
