--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ body {
     height: 50vh;
 }
 
+.grid-container-three {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    width: 80%;
+    margin: 5% 10% 5% 10%;
+}
+
 .grid-container-icons {
     display: grid;
     grid-template-columns: 15% 15% 15%;
@@ -66,6 +73,11 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.didascalie {
+    text-align: center;
+    margin: 10% 2% 0 2%;
 }
 
 .black-div {
