--- a/style.css
+++ b/style.css
@@ -24,6 +24,17 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
+.third {
+    background-image: url('./fondo2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0;
+}
+.fourth {
+    background-image: url('./fondo3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 .my-hr {
     width: 30%;
@@ -31,7 +42,7 @@ body {
 }
 .my-hr-1 {
     width: 30%;
-    margin: 3% 35% 2% 35%;
+    margin: 0 35% 2% 35%;
 }
 .grid-container {
     display: grid;
@@ -54,6 +65,20 @@ body {
     margin: 5% 10% 5% 10%;
 }
 
+.grid-container-location {
+    display: grid;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-gap: 2% 2%;
+    width: 90%;
+    margin: 0 3% 0 3%;
+}
+
+.gallery-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .grid-container-icons {
     display: grid;
     grid-template-columns: 15% 15% 15%;
@@ -65,7 +90,8 @@ body {
     display: grid;
     grid-template-columns: 50% 50%;
     width: 80%;
-    margin: 3% 10% 3% 10%;
+    margin: 3% 10% 0 10%;
+    padding-bottom: 3%;
 }
 
 .center-text {
@@ -77,7 +103,7 @@ body {
 
 .didascalie {
     text-align: center;
-    margin: 10% 2% 0 2%;
+    margin: 10% 2% 10% 2%;
 }
 
 .black-div {
